implemented upload for profile picture

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1181,7 +1181,7 @@
               management system for Patients, Doctors, and Hospitals.
             </p>
             <a
-              href="#"
+              href="#features"
               class="liquidGlass-wrapper glass-button reveal reveal-up"
               data-scroll
               data-scroll-speed="1.4"
